# upgen

./: .cproject  .project  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
doc/: Makefile.am  Makefile.in  upgen-0.5-2.html
src/: Makefile.am  Makefile.in
src/coder/: cmacro.cpp  cmacro.h  cmcond.h  cmmgr.cpp  cmmgr.h  coder.cpp  coder.h  coderfwd.h  ctoken.h  dmmap.cpp  dmmap.h  dmodel.h  metakeys.h
src/common/: action.h  bitmap.h  charmap.cpp  charmap.h  clhandler.cpp  clhandler.h  common.h  filehelper.cpp  filehelper.h  reporter.cpp  reporter.h  rulemgr.cpp  rulemgr.h  setsplitter.cpp  setsplitter.h  strhelper.cpp  strhelper.h  types.h  unifind.cpp  unifind.h  uniqueue.h  uset.cpp  uset.h
src/gcode/: coderyac.cpp  coderyac.h  ulyac.cpp  ulyac.h
src/lexer/: defines.h  dfafwd.h  dgarc.cpp  dgarc.h  dgnode.cpp  dgnode.h  dgraph.cpp  dgraph.h  dtable.cpp  dtable.h  index.h  lexer.cpp  lexer.h  macmgr.h  retree.cpp  retree.h  scmgr.h  token.h
src/main/: main.cpp  mreporter.cpp  mreporter.h  upgmain.cpp  upgmain.h
src/meta/: coderyac.upg  ulyac.upg
src/parser/: defines.h  grammar.cpp  grammar.h  index.h  lalrtrp.h  lritem.h  parserfwd.h  pgraph.cpp  pgraph.h  prod.cpp  prod.h  ptable.cpp  ptable.h  symbol.h
src/spec/: c_string_converter.cpp  cpp-101019-prototype.data  cpp-101109-prototype .data  cpp-prototype.data  cpp-prototype.data.string  cpplang.cpp  csconv  pascal-101019-prototype .data  pascal-101109-prototype .data  pascal-prototype.data  pascal-prototype.data.string  paslang.cpp  spec.cpp  spec.h  tcnvt
test-suites/: README  c++test  c++test_rc  cpp-script  genscript.upg  pas-script  pastest  upgen
test-suites/eof-issue-cases/: charset-negator  charset-posix-cntrl  charset-posix-punct
test-suites/newcases/: verify_bug_%prec_lack_token.upg  verify_bug_reduce_due_to_wrong_followset.upg  verify_bug_unreferenced_string_token.upg  verify_ok_reduce.upg
